# pde_solvers

./: .gitignore  CMakeLists.txt
build_mfem/: CMakeCache.txt  Makefile  cmake_install.cmake  poisson_fd
build_mfem/mfem/: Makefile  cmake_install.cmake
common/include/: decomp2d.hpp  haloExchange.hpp
common/src/: common_dummy.cpp
fd/poisson/: poisson_main.cpp  test_decomp.cpp
mfem/: CMakeLists.txt  smoke.cpp
